--- a/fc-ddd-patterns/package.json
+++ b/fc-ddd-patterns/package.json
@@ -5,6 +5,7 @@
     "@swc/jest": "^0.2.20",
     "@types/jest": "^27.5.2",
     "jest": "^27.5.1",
+    "jest-environment-jsdom": "^28.1.3",
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
